mobile height overflow fix

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ p.medium {
 
 .content-box {
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   padding: 16px;
   display: flex;
